examples/compiler_errors/row_effects/unknown_handler_operation_e401.flx
// expect: compile_error
// expect-error: E401

effect Console {
    print: String -> ()
}

fn main() with Console {
    perform Console.print("hello") handle Console {
        read(resume) -> resume("x")
    }
}
